# ReseachPal

./: README.md  main.py  pyproject.toml
configs/: digital_data_etl.yaml
pipelines/: __init__.py  etl.py
src/: agent.py  config.py
src/agent/: base.py  cond_edges.py  graph.py
src/application/: papers_rag.py
src/application/data_collectors/: arxiv.py  base.py  constants.py  dispatcher.py  github.py  query_builder.py  web.py
src/application/rag/: __init__.py  chunking.py
src/application/user_feedback/: __init__.py  quality_filter.py  update.py
src/data/: mongo.py
src/domain/: document.py  prompt.py  queries.py  requests.py  state.py  types.py  utils.py
src/infrastructure/: mongo.py  opik_utils.py  qdrant.py  service.py
src/models/: embeddings.py  gemini.py
src/monitoring/: opik.py
src/prompts/: base.py  templates.py
src/tools/papers/: arxiv.py  base.py  query_expansion.py  scorer.py
src/tools/rag/: base.py
src/tools/rag/papers/: __init__.py  arxiv_retriever.py  generation.py  query_expansion.py  reranker.py  retriever.py  scorer.py  user_question.py
src/utils/: config.py  constants.py  misc.py
steps/etl/: __init__.py  collect_documents.py
steps/infrastructure/: __init__.py  ingest_to_mongo.py  load_to_vector_db.py
steps/rag/: chunk.py  embed.py
tools/: run.py  server.py
