[project]
name = "src"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    {name = "Eden Yavin", email = "eden.yavin25@gmail.com"},
]
license = { text = "MIT" }
requires-python = ">=3.11,<3.13"
dependencies = [
    "click>=8.1.3",
    "loguru>=0.7.3",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.7.0",
    "pymongo>=4.4.0",
    "zenml[server]>=0.73.0",
    "boto3>=1.36.0",
    "langchain>=0.3.14",
    "langchain-openai>=0.3.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "sentence-transformers>=3.0.0",
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "xxhash (>=3.5.0,<4.0.0)",
    "langgraph (>=0.3.21,<0.4.0)",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.7.2",
]

[tool.pip]
extra-index-url = "https://download.pytorch.org/whl/cpu/torch_stable.html"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.poe.tasks]
local-zenml-server-down = "poetry run zenml down"
run-digital-data-etl = "poetry run python -m tools.run --run-etl --no-cache --etl-config-filename digital_data_etl.yaml"


[tool.poe.tasks.local-zenml-server-up]
control.expr = "sys.platform"

[[tool.poe.tasks.local-zenml-server-up.switch]]
case = "darwin"
env = { OBJC_DISABLE_INITIALIZE_FORK_SAFETY = "YES" }
cmd = "poetry run zenml up"

[[tool.poe.tasks.local-zenml-server-up.switch]]
cmd = "poetry run zenml up"

[tool.ruff]
target-version = "py312"
lint-fix = "poetry run ruff check --fix ."
format-fix = "poetry run ruff format ."
